--- a/OneWiki/data/Towns.wiki
+++ b/OneWiki/data/Towns.wiki
@@ -6,4 +6,5 @@ Impell Down (One Piece prison)    diff 4
 Fiore  (magical peaceful island)    diff 1 
 Nightbrook  (mind games, nightvale)  diff 2
 Elbaf  (one piece land of giants)  diff 3
+Alexandria  (huge trade center, library) diff 2
 
