--- a/OneWiki/data/Quest 1.wiki
+++ b/OneWiki/data/Quest 1.wiki
@@ -29,7 +29,7 @@ Entities of interest:
 	-Wanted posters in front of the marine outpost:  
 		Pirate Admiral [Don Kreig](250 Gold)
 		[Rex The Smasher](150 Gold)
-		[Redbeard The Unlucky]( 20 Gold)
+		[Redbeard The Unlucky]( 20 Gold) PAID OUT TO Kieran
 
 -Docks:  run by Dock Master Mc Rock a task oriented person who likes to meet his deadlines. He is currently working on building another fishing boat for the town. 
 	-Dock Master Mc Rock will attempt to give strong characters (14+) some work in order to finish the boat by tomorrow, this will consume the rest of the day for the character. (+2 silver per point of strength is earned) 
