--- a/OneWiki/data/Don Kreig.wiki
+++ b/OneWiki/data/Don Kreig.wiki
@@ -2,7 +2,7 @@
 
 One of the most successful pirates currently alive. He operates a large fleet of pirates with about 10 ships and a total crew count of about 700. He himself is a rather rude and disgruntled man who wears a great set of plate armor.
 
-Current Bounty Issued by the marines: 200 Gold
+Has a bounty issued by the [Marines] 
 
 +++Don Kreig
 Human 
@@ -12,17 +12,11 @@ Spear
 
  
 +++Pirate Grunt
-(use DND 5e Bandit pg 343)
-Weapons:   
-    Dagger      
-    Short Sword 
-    Hatchet     
-    Mace        
-Leather Armor 
+(use DND 5e Bandit pg 343)       
+loot: 1d4 silver
 
 
 +++ Leutenant Ned
 (use DND 5e Thug pg350)
-Short Sword 1D6
-Chainmail
+loot: 1d4 gold
 
