--- a/OneWiki/data/Redbeard The Unlucky.wiki
+++ b/OneWiki/data/Redbeard The Unlucky.wiki
@@ -3,6 +3,9 @@
 An unfortunate pirate who ate the Unlucky Akuma fruit, that causes all 20 rolls around him to be rolled with disadvantage.
 Initially found at the Augsburg Crying Clam Inn/bar drinking away his unfortunate woes.
 
+He was met by the heroes Keiran, Kyra and Jack, who bamboozled him, and turned him into local marine authorities who had
+a 20 gold bounty on his head. Last seeen in the jail cell at the Augsburg Marine Outpost.
+
 Visual Description:
 A older looking man who has a large dirty redish colored beard. Wearing a large dark red trench coat
 
