--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -19,6 +19,7 @@ Lush green vegetation covers the large hill of an island. The sounds of all kind
       -there is a stone with a counter clockwise jagged spiral pattern on it, behind it of which is a mummified piece of Tharizdun
         if 6 pieces are collected (head,torso,arm,arm,leg,leg) Tharizdun will be reborn
          
+    One of the outer islands has a griffon roost (pg 174 of monster manual) home to one griffon.     
        
 Central island:
 A larger island with a respectively large hill in the center atop which the town of Mayara is established. From a distance, the walls can be seen even from the shore. There are four docking villages on the major North/South/East/West sides of the island. 
@@ -28,30 +29,50 @@ Encounterable animals of Fiore:
       Wolves (pg 341)
       Giant Fire Beetles (pg 325) (night only)
       Elk (pg 322)
+      Brown Bear (pg 319)
       
 
 Places of interest in Mayara:
     NOBLE AREA
       Marine Embassy
+        A few captains and officers reside here, they help lead the Mayara soldiers in times of need.
       Mayara barracks
+        Home to a couple dozen soldiers. 
       King's palace
         Guarded by a mix of Marines and Mayara's own soldiers. The palace isn't too large, but yet build with impressive stonework. The interior is decorated with equally elegant wood furnishings with artistic over-arching stone artworks. Down the large central hall is [King Jor Doken]'s throne. Rooms off of the main hallway include, the King's room, kitchen, servants quarters, armoury.
-    COMMON AREA
+    
+    COMMON ARE
       Temple of Elysium
         -dieties (pg 10 DM handbook)
+        -Ran by Head Cleric Martin Terratio, a very peaceful human
       Market
-        -blacksmith
-        -herbalist
-        -exotic food vendor (knows of devil fruits)
-        -flectcher
+        -blacksmith, Shirrong Bronzecore, hearty personality
+            sells/buys all metal based weapons
+            sells/buys all metal based armour
+            repairs all metal based armour and weapons 
+        -herbalist, Harris Flennre (half-elf), common personality
+            wolfsbane (15g per lb) (smell that deters wolves)
+            mint, tea (5s per lb)
+            cloves (3g per lb)
+            cinnamon (2g per lb)
+            saffron (15g per lb)
+            nightshade (15g per lb) (poisonous)
+        -exotic food vendor, Elisha Vanesson (human)(knows of [AkumaFruits], but tries to be secretive)
+            items for sale include bananas, kiwi, cheese, grapes, cave cricket on a stick. (5cp per item)          
+        -flectcher, Yanny McLougin (halfling), redneckish personality
+            items for sale short bow (25g), long bow(50g), arrows (20x 1g)
         -animal vendor (chickens/pigs/goats)
             2cp x lb of chicken (1d6) (5 at stall)
             1gp per goat (2 at stall)
             3gp per pig (2 at stall)
+      
       Carpenter's Guild (the Carps)
-        This guild is comprised mostly of elves who work indipendently of elegant wooden furniture and architecture, with other races amungst them, excluding dwarves.
+        This guild is comprised mostly of elves who work indipendently of elegant wooden furniture and architecture, with other races amungst them, excluding dwarves. They have an extensive library of carpentry techniques and patterns, amungst the books the [Legend of Regdar] can be found, due to it's references of ancient elvish architectures. 
+        The Carpenter's guild is ran by the pretentious Jerrod Louverre (wood elf) a master carpenter who believes the best craftsmanship is done by indipendent and intensive study and frequent practice. Thinks poorly of the Mason's Guild.
+      
       Mason's Guild (the Masos)
-        This guild is comprised mostly of dwarves who work in a disciplined manner in teams making bricks and stone works of art. Other races are amungst them, excluding elves.
+        This guild is comprised mostly of dwarves who work in a disciplined manner in teams making bricks and stone works of art. Other races are amungst them, excluding elves. 
+        The Mason's Guild is ran by the master mason Dirk Dagson, a stern disciplined dwarf who thinks good craftsmanship comes from colaborative learning and working with your peers. Lessons at the Mason's guild are passed down from master to students. Thinks poorly of the Carpenter's Guild. 
         
 A very happy pleasant fellow named Geth is a cartographer who has lived in the town for a long time and is quick to spot newcomers to sell is town maps to.
     2 silver for a map!        
