--- a/OneWiki/data/Dun Morhen.wiki
+++ b/OneWiki/data/Dun Morhen.wiki
@@ -10,7 +10,7 @@ Feronia Vie (High Elf)
 Wizard
 A runnaway queen of [Norrath]
 
-Nifle VanHivener (Human)
+Nifle VanHivener (Wood Elf)
 Quarter staff
 Feronia's right hand man
 
