--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -45,6 +45,7 @@ Places of interest in Mayara:
       Temple of Elysium
         -dieties (pg 10 DM handbook)
         -Ran by Head Cleric Martin Terratio, a very peaceful human
+        -Book [Pantheon of the Dawn War] can be found here
       Market
         -blacksmith, Shirrong Bronzecore, hearty personality
             sells/buys all metal based weapons
