--- a/OneWiki/data/Tharizdun.wiki
+++ b/OneWiki/data/Tharizdun.wiki
@@ -1,4 +1,6 @@
 ﻿++ Tharizdun
 
-Chaotic Evil God of trickery, known in the legend of Regdar for causing calamity for Fiore
+God of Madness, known in the legend of Regdar for causing calamity for [Fiore]
 (page 10 of DM handbook)
+Chaotic Evil
+Symbol: Jagged counter-clockwise spiral
