--- a/OneWiki/data/Gruumsh.wiki
+++ b/OneWiki/data/Gruumsh.wiki
@@ -1,5 +1,5 @@
 ﻿++ Gruumsh
 
-God of destruction, currently sealed under [Luthadel], causing ashmounts
+God of destruction, currently sealed under a mountain near [Luthadel], causing ashmounts
 Held at bay by the god-emporer of Luthadel
 Symbol: Triangular Eye with bony protrusions
