--- a/OneWiki/data/Towns.wiki
+++ b/OneWiki/data/Towns.wiki
@@ -4,9 +4,9 @@
 Impell Down (One Piece prison)
 [Fiore] 
 Nightbrook  (mind games, nightvale)
-Elbaf  (one piece land of giants) 
-Alexandria  (huge trade center, library)
-Arabasta (large desert island)
+[Elbaf]  (one piece land of giants) 
+[Alexandria]  (huge trade center, library)
+[Arabasta] (large desert island)
 [Dun Morhen] 
 [Ak'anon] (city of invention)
 [Odus] (Camp of refugees from Luthadel) 
