adding session 4 notes

--- a/OneWiki/data/Session 4 Notes.wiki
+++ b/OneWiki/data/Session 4 Notes.wiki
@@ -1,3 +1,10 @@
 ﻿++ Session 4 Notes
 
-the two pieces of the mummified right arm of [Tharizdun] will re-join together when the adventurer's return to the boat 
+the two pieces of the mummified right arm of [Tharizdun] will re-join together when the adventurer's return to the boat
+
+players had a good encounter with Geth, shared Inn room number 6 with him
+
+players saught audience with the King, stated that it was of great importance, they had a music box to give him, and it was in regards to [Luthadel], also shared their Inn room number 6 with the guards at the Palace.
+
+They got the bounty on the Griffin increased to 40g by talking with Ghan Bopps, the livestock merchant.
+ 
