adding notes for god overseeing

--- a/OneWiki/data/Gruumsh.wiki
+++ b/OneWiki/data/Gruumsh.wiki
@@ -2,4 +2,5 @@
 
 God of destruction, currently sealed under a mountain near [Luthadel], causing ashmounts
 Held at bay by the god-emporer of Luthadel
+Oversees [Kunark]
 Symbol: Triangular Eye with bony protrusions
