--- a/OneWiki/data/Odus.wiki
+++ b/OneWiki/data/Odus.wiki
@@ -6,7 +6,7 @@ The weather this day is stormy with a decent wind, and has been rainy and windy 
 
 A refugee camp is established here by about 50 refugees from a farmland of [Luthadel] owned by [House Zolis]. They've been here for about 3 months time. Many have taken to cultivating the land to produce food, as was the main profession they were enslaved into.
 
-This escape was made possible by the efforts of the [Renegade Leader Kelsier] who through his criminal connections was able to recruit the mercenary band [Golden Hand] to aid with this exodus on a stolen sailing ship. Many lives were lost in the process, many loves ones too, but it was what had to be done for their freedom.
+This escape was made possible by the efforts of the [Renegade Leader Kelsier] who through his criminal connections was able to recruit the mercenary band [Golden Hand] to aid with this exodus on a stolen sailing ship. Many lives were lost in the process, many loved ones too, but it was what had to be done for their freedom.
 
 The camp gets by on the yield of foragers, hunting on the island, and fishing. It's a rough living still, but it's being worked on.
 
