--- a/OneWiki/data/Tharizdun.wiki
+++ b/OneWiki/data/Tharizdun.wiki
@@ -3,4 +3,5 @@
 God of Madness, known in the legend of Regdar for causing calamity for [Fiore]
 (page 10 of DM handbook)
 Chaotic Evil
+Oversees [Fiore]
 Symbol: Jagged counter-clockwise spiral
